--- a/_config.yml
+++ b/_config.yml
@@ -2,18 +2,7 @@
 title: Nikolaj Bewer
 description: Jekyll Theme Minimal Resume
 # baseurl: "" # the subpath of your site, e.g. /blog
-# url: "localhost:3000" # the base hostname & protocol for your site e.g. http://willianjusten.com.br
+# url: "localhost:4000" 
 
 # User settings
 username: Nikolaj Bewer
-user_description: 
-user_title: Software Engineer
-email: 
-# twitter_username: lorem_ipsum
-# github_username:  lorem_ipsum
-# gplus_username:  lorem_ipsum
-
-
-
-#exclude: ['package.json' , 'node_modules']
-#'src'
