--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Nikolaj Bewer
-description: Jekyll Theme Minimal Resume
+description: Nikolaj Bewer's Personal Website
 # baseurl: "" # the subpath of your site, e.g. /blog
 # url: "localhost:4000" 
 
